Implemented action-item task creation with idempotency by key, wired created task IDs into the hold-meeting response, added integration coverage